[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Fonts/8bitOperatorPlus-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/Twitter.png.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Twitch.png.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Itch.png.png" type="Texture" id=5]
[ext_resource path="res://Sprites/TwitterHovered.png.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ItchHovered.png.png" type="Texture" id=7]
[ext_resource path="res://Sprites/TwitchHovered.png.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.756863, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.756863, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RichTextLabel3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.756863, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.756863, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0.756863, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.756863, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0.756863, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RichTextLabel3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.756863, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0.756863, 0, 0, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 2 )

[node name="GameManager" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="InitialPopup" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/InitialPopup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -529.0
margin_top = -312.5
margin_right = 529.0
margin_bottom = 312.5
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/InitialPopup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -439.0
margin_top = -53.0
margin_right = 439.0
margin_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=25 freq=10]PRESS ENTER TO PLAY[/wave]"
text = "PRESS ENTER TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathPopup" type="Control" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DeathPopup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -529.0
margin_top = -312.5
margin_right = 529.0
margin_bottom = 312.5
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/DeathPopup"]
pause_mode = 2
modulate = Color( 0.756863, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -70.0
margin_right = 183.5
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=25 freq=10]YOU DIED[/wave]"
text = "YOU DIED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/DeathPopup"]
pause_mode = 2
modulate = Color( 0.756863, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -72.0
margin_right = 183.5
margin_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=25 freq=10]YOU DIED[/wave]"
text = "YOU DIED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/DeathPopup"]
pause_mode = 2
modulate = Color( 0.756863, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -349.0
margin_top = 18.5
margin_right = 349.0
margin_bottom = 91.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[wave amp=15 freq=10
]PRESS ENTER TO RESTART[/wave]"
text = "PRESS ENTER TO RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/DeathPopup"]
anims/RESET = SubResource( 2 )
anims/blink = SubResource( 3 )

[node name="EndingPopup" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/EndingPopup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -529.0
margin_top = -312.5
margin_right = 529.0
margin_bottom = 312.5
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/EndingPopup"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -422.0
margin_right = 422.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[wave amp=25 freq=10]CONGRATS[/wave]"
text = "CONGRATS"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/EndingPopup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.5
margin_top = -76.0
margin_right = 496.5
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[wave amp=25 freq=10]PRESS ENTER TO RESTART[/wave]"
text = "PRESS ENTER TO RESTART"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/EndingPopup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.5
margin_top = 39.0
margin_right = 147.5
margin_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 50 )
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "[wave amp=25 freq=10]FOLLOW ME[/wave]"
text = "FOLLOW ME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Twitter" type="TextureButton" parent="CanvasLayer/EndingPopup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 156.0
margin_top = -174.0
margin_right = 229.0
margin_bottom = -100.0
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Twitch" type="TextureButton" parent="CanvasLayer/EndingPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.5
margin_top = -174.0
margin_right = -7.5
margin_bottom = -100.0
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )

[node name="Itch" type="TextureButton" parent="CanvasLayer/EndingPopup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -317.0
margin_top = -174.0
margin_right = -244.0
margin_bottom = -100.0
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/EndingPopup/Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="pressed" from="CanvasLayer/EndingPopup/Twitch" to="." method="_on_Twitch_pressed"]
[connection signal="pressed" from="CanvasLayer/EndingPopup/Itch" to="." method="_on_Itch_pressed"]
